--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ html {
 body {
   width: 800px;
   margin: 80 auto;
-  background-image: url(..//proyecto/img/fondo7.jpg);
+  background-image: url(img/fondo7.jpg);
 }
 
 h1, h2 {
